--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<a-marker type="pattern" url="data/markers\iconoDS.patt" markercontroller="name : iconoDS"></a-marker>
 			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
 			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
+			<a-marker type="pattern" url="data/markers\sidra.patt" markercontroller="name : sidra"></a-marker>
+			<a-marker type="pattern" url="data/markers\vino.patt" markercontroller="name : vino"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
