--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
 			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
 			<a-marker type="pattern" url="data/markers\sidra.patt" markercontroller="name : sidra"></a-marker>
+			<a-marker type="pattern" url="data/markers\sidra2.patt" markercontroller="name : sidra2"></a-marker>
 			<a-marker type="pattern" url="data/markers\vino.patt" markercontroller="name : vino"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
