--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a-marker type="pattern" url="data/markers\iconoDS.patt" markercontroller="name : iconoDS"></a-marker>
 			<a-marker type="pattern" url="data/markers\Nutty.patt" markercontroller="name : Nutty"></a-marker>
 			<a-marker type="pattern" url="data/markers\NuttyCardboard.patt" markercontroller="name : NuttyCardboard"></a-marker>
+			<a-marker type="pattern" url="data/markers\qr.patt" markercontroller="name : qr"></a-marker>
 			<a-marker type="pattern" url="data/markers\sidra.patt" markercontroller="name : sidra"></a-marker>
 			<a-marker type="pattern" url="data/markers\sidra2.patt" markercontroller="name : sidra2"></a-marker>
 			<a-marker type="pattern" url="data/markers\vino.patt" markercontroller="name : vino"></a-marker>
